scripts-old/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syntheticapi
  labels:
    app: syntheticapi
    role: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: syntheticapi
      role: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: syntheticapi
        role: frontend
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: syntheticapi
            role: frontend
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: syntheticapi
            role: frontend
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: syntheticapi
        image: acrname.azurecr.io/syntheticapi:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          initialDelaySeconds: 5
          periodSeconds: 10
